--- a/HW3/test.html
+++ b/HW3/test.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>HW2</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
 </head>
 <body>
 	<div class="content">
@@ -14,25 +16,24 @@
 			<div class="header-block">
 				<div class="block">
 				Aktuelles
-			</div>
-			<div class="block">
+			</div><!--
+			--><div class="block">
 				Pholosophie
-			</div>
-			<div class="block">
+			</div><!--
+			--><div class="block">
 				Besonderheiten
-			</div>
-			<div class="block">
+			</div><!--
+			--><div class="block">
 				Parter 
-			</div>
-			<div class="block">
+			</div><!--
+			--><div class="block">
 				Kontact
-			</div>
-			<div class="block">
+			</div><!--
+			--><div class="block">
 				Impressum
 			</div>
 			</div>
 		</div>
-		<div class="empty"></div>
 		<div class="body">
 			<div class="body-image">
 				<img src="images/content-img.jpg" alt="office" class="image">
