--- a/HW2/index.html
+++ b/HW2/index.html
@@ -6,67 +6,61 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="header">
-		<div class=" inline-block">
-			<img src="image/bouqs.png" class="image">
+	<div class="content">
+		<div class="header">
+			<div class="header-logo">
+				<img src="image/bouqs.png" alt="logo" class="logo">
+			</div>
+			<div class="header-links">
+				<ul class="list">
+					<li class="item"><a href="" class="href">Link</a></li>
+					<li class="item"><a href="" class="href">Link</a></li>
+					<li class="item"><a href="" class="href">Link</a></li>
+					<li class="item"><a href="" class="href">Link</a></li>
+					<li class="item"><a href="" class="href">Link</a></li>
+				</ul>
+			</div>
+			<div class="header-number">
+				8(775)057-87-77
+			</div>
 		</div>
-		<div class="inline-block">
-			<a href="">SHOP</a>
-		</div>
-		 <div class="inline-block">
-			<a href="">OUR DIFFERENCES</a>
-		</div>
-		<div class="inline-block">
-			<a href="">SUBSCRIPTIONS</a>
+	<div class="body clearfix">
+		<div class="main clear">
+			<p class="created">Main Content</p>
+			<div class="main-content"><!--
+				--><p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, soluta, ab. Eum dolores aut pariatur asperiores deserunt, placeat, iusto ipsum commodi iste magni quasi, architecto esse dignissimos minus eius harum quas possimus soluta suscipit sequi nostrum. Rerum a ea fugit, odio est officiis repudiandae neque deserunt vero dolore, optio amet sapiente, ipsam eveniet. Eius, corporis veniam repellat nulla? Quaerat nisi deserunt labore vel eaque eligendi fuga dolores aperiam, atque nam rem dolor ut qui minus ab magnam repellat! Debitis facere quasi, magnam voluptatum obcaecati in ducimus dicta perspiciatis ullam odit.</p>
+			</div>
+		<img class="main-image" src="image/flower.png" alt="flower">
+	</div>
+	<div class="sidebar">
+		<p class="created">Sidebar</p>
+		<div class="sidebar-content">
+			<input  type="text" name="text" placeholder="Search ...">
+			<ul class="sidebar-ul">
+			<li class="sidebar-item">Link 1</li>
+			<li class="sidebar-item">Link 2</li>
+			<li class="sidebar-item">Link 3</li>
+			<li class="sidebar-item">Link 4</li>
+			<li class="sidebar-item">Link 5</li>
+			<!-- <img class="image3" src="image/flower2.png"> -->
+		</ul>
 		</div>
 		
-		<div class="inline-block">
-			<p class="phone">8(775)057-87-77</p>
-		</div>
-	</div>
-	<div class="body">
-		<div class="main">
-		<p class="created">Main Content</p>
-		<p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<img class="image2" src="image/flower.png">
-	</div>
-	<div class="main2">
-		<p class="created">Sidebar</p>
-		<input type="text" name="text" placeholder="Search ...">
-		<ul>
-			<li>Link 1</li>
-			<li>Link 2</li>
-			<li>Link 3</li>
-			<li>Link 4</li>
-			<li>Link 5</li>
-			<img class="image3" src="image/flower2.png">
-		</ul>
 	</div>
 
 	</div>
 	
-	
 	<footer class="footer">
-		<div class="icon">
-			<i class="fa fa-facebook"></i>
-			<i class="fa fa-vk"></i>
-			<i class="fa fa-instagram"></i>
-			<i class="fa fa-youtube"></i>
-			<i class="fa fa-twitter"></i>
-		</div>
+		<ul class="footer-sites">
+			<li class="fa fa-facebook"></li>
+			<li class="fa fa-vk"></li>
+			<li class="fa fa-instagram"></li>
+			<li class="fa fa-youtube"></li>
+			<li class="fa fa-twitter"></li>
+		</ul>
 		<p class="created">Created by Bashkeyeva Symbat</p>
 	
 	</footer>
-	<!-- <div class="main">
-		<ul class="ul">
-		<li>
-			<a href="">SHOP</a>
-			<a href="">OUR DIFFERENCES</a>
-			<a href="">SUBSCRIPTIONS</a>
-		</li>
-	</ul>
-	</div> -->
-	
-
+	</div>
 </body>
 </html>
