--- a/HW2/index.html
+++ b/HW2/index.html
@@ -42,7 +42,7 @@
 			<li class="sidebar-item">Link 3</li>
 			<li class="sidebar-item">Link 4</li>
 			<li class="sidebar-item">Link 5</li>
-			<!-- <img class="image3" src="image/flower2.png"> -->
+			<img class="sidebar-image" src="image/flower2.png">
 		</ul>
 		</div>
 		
